web/bible-on-site/src/app/components/TanahSefarimSection.module.css
.section {
  position: relative;
  text-align: center;
  width: 100%;
  z-index: 2;
  background-color: #ccc;
  padding: 1.5em 0 3em;
  scroll-margin-top: 1em;
}

.header {
  padding: 0.5em 0;
  letter-spacing: 0.1em;
  text-align: center;
  color: #333;
}

.header h1 {
  font-size: 1.6em;
  margin: 0.3em 0;
}

.header h2 {
  font-size: 1em;
  margin: 0.2em 0;
  color: #555;
  letter-spacing: 0;
  font-weight: normal;
}

.bookshelfContainer {
  width: 100%;
  min-height: 350px;
}

.loading {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 300px;
  color: #666;
  font-size: 1.1em;
}

/* Bottom divider - transition to white (AppSection) */
.bottomDivider {
  background-repeat: no-repeat;
  background-size: 110%;
  right: 0;
  height: 3em;
  pointer-events: none;
  position: absolute;
  width: 100%;
  z-index: 3;
  background-position: bottom;
  bottom: -0.5em;
}

/* Responsive divider images */
@media screen and (max-width: 960px) {
  .bottomDivider {
    background-image: url(/root/tanah-sefarim-bottom-devider-xs.svg);
  }
  .bookshelfContainer {
    min-height: 1400px;
  }
}

@media screen and (min-width: 960px) and (max-width: 1280px) {
  .bottomDivider {
    background-image: url(/root/tanah-sefarim-bottom-devider-s.svg);
  }
}

@media screen and (min-width: 1280px) and (max-width: 1920px) {
  .bottomDivider {
    background-image: url(/root/tanah-sefarim-bottom-devider-m.svg);
  }
}

@media screen and (min-width: 1920px) and (max-width: 2560px) {
  .bottomDivider {
    background-image: url(/root/tanah-sefarim-bottom-devider-l.svg);
  }
}

@media screen and (min-width: 2560px) {
  .bottomDivider {
    background-image: url(/root/tanah-sefarim-bottom-devider-xl.svg);
  }
}

